# singlefieldform

./: .gitignore  LICENSE  README.rst  manage.py  pyproject.toml
slides/: singlefield.html
src/singlefield/: __init__.py  utils.py
src/singlefield/app/: apps.py  forms.py  models.py  urls.py  views.py
src/singlefield/app/migrations/: 0001_initial.py
src/singlefield/app/templates/django/forms/: dl.html  field.html
src/singlefield/app/templates/singlefield_app/: _book_field_form.html  book_confirm_delete.html  book_field_form.html  book_form.html  book_form2.html  book_list.html  book_list2.html  book_list3.html
src/singlefield/app/templatetags/: app.py
src/singlefield/site/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/singlefield/site/templates/: base.html  homepage.html
