[build-system]
requires = ["flit_core >=3.12,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "singlefield"
authors = [{name = "Hanne Moa", email = "hanne.moa@sikt.no"}]
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
dependencies = [
    "Django>=5.2",
]

[project.urls]
Home = "https://github.com/Uninett/singlefieldform"
